@@ -15,10 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+types/{legacy/apply.c, clock/clock.c}, server/ob_types.c: Move apply logic for
+  clocks out of legacy area in the ob_method system.
+--
 types/{legacy/apply.c, exit/exit.c}: Move apply logic for exits out of legacy
   area in the ob_method system.
 Alex Schultz 2007-04-05
-
 
 Tweak harvesting skill per Lalo's suggestions. If a living object is harvested,
  goes to map instead of in the inventory. Also make the key/value checks more meaningful.
